Refactoring of StdoutYamlOutput to OutputSink and OutputProcessor, changeStatus output for all fields

--- a/src/test/resources/new_2.6.0.yaml
+++ b/src/test/resources/new_2.6.0.yaml
@@ -91,6 +91,8 @@ components:
           format: int64
         name:
           type: string
+        firstName:
+          type: string
     Tag:
       type: object
       properties:
