further work on ApiCompatibilityCheck

--- a/src/test/resources/old_2.6.0.yaml
+++ b/src/test/resources/old_2.6.0.yaml
@@ -58,9 +58,7 @@ channels:
           type: object
           properties:
             user:
-              type: object
-            signup:
-              type: object
+              type: string
         correlationId:
           description: Default Correlation ID
           location: $message.header#/correlationId
