--- a/src/test/resources/new_2.6.0.yaml
+++ b/src/test/resources/new_2.6.0.yaml
@@ -62,9 +62,9 @@ channels:
           type: object
           properties:
             user:
-              type: object
-            signup:
-              type: object
+              type: string
+            role:
+              type: string
         correlationId:
           description: Default Correlation ID
           location: $message.header#/correlationId
