--- a/pom.xml
+++ b/pom.xml
@@ -134,4 +134,12 @@
             </plugin>
         </plugins>
     </build>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/siom79/jasyncapicmp</url>
+		</repository>
+	</distributionManagement>
 </project>
