--- a/jasyncapicmp/pom.xml
+++ b/jasyncapicmp/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 
     <artifactId>jasyncapicmp</artifactId>
+	<name>${project.groupId}:${project.artifactId}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
