--- a/.github/workflows/maven-publish-central.yml
+++ b/.github/workflows/maven-publish-central.yml
@@ -15,12 +15,8 @@ jobs:
           server-username: OSSRH_USERNAME
           server-password: OSSRH_TOKEN
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-      - name: Publish to Maven Central
-        run: |
-          git config user.name '${{ github.actor }}'
-          git config user.email '${{ github.actor }}@users.noreply.github.com'
-          mvn -B release:prepare release:perform -Dpassword=${{ secrets.GITHUB_TOKEN }}
+      - name: Publish package
+        run: mvn --batch-mode deploy -P release
         env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
