--- a/.github/workflows/maven-publish-central.yml
+++ b/.github/workflows/maven-publish-central.yml
@@ -15,8 +15,10 @@ jobs:
           server-username: OSSRH_USERNAME
           server-password: OSSRH_TOKEN
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Publish package
-        run: mvn -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} --batch-mode deploy -Prelease
+        run: mvn --batch-mode deploy -Prelease
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
