--- a/jasyncapicmp-maven-plugin/src/test/resources/project-to-test/pom.xml
+++ b/jasyncapicmp-maven-plugin/src/test/resources/project-to-test/pom.xml
@@ -4,7 +4,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.siom79.jasyncapicmp</groupId>
+	<groupId>io.github.siom79.jasyncapicmp</groupId>
 	<artifactId>jasyncapicmp-maven-plugin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -13,7 +13,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.github.siom79.jasyncapicmp</groupId>
+				<groupId>io.github.siom79.jasyncapicmp</groupId>
 				<artifactId>jasyncapicmp-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<configuration>
