--- a/jasyncapicmp/pom.xml
+++ b/jasyncapicmp/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.github.siom79.jasyncapicmp</groupId>
+		<groupId>io.github.siom79.jasyncapicmp</groupId>
 		<artifactId>jasyncapicmp-base</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
