--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.siom79.jasyncapicmp</groupId>
+	<groupId>io.github.siom79.jasyncapicmp</groupId>
 	<artifactId>jasyncapicmp-base</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
