--- a/jasyncapicmp/pom.xml
+++ b/jasyncapicmp/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.github.siom79.jasyncapicmp</groupId>
 		<artifactId>jasyncapicmp-base</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
     <artifactId>jasyncapicmp</artifactId>
