--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.github.siom79.jasyncapicmp</groupId>
 	<artifactId>jasyncapicmp-base</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>jasyncapicmp</name>
